# This file is in /src/parser
FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)
BISON_TARGET(PARSER iec_bison.yy ${CMAKE_CURRENT_SOURCE_DIR}/iec_bison.cc)
FLEX_TARGET(LEXER iec_flex.ll ${CMAKE_CURRENT_SOURCE_DIR}/iec_flex.cc)
ADD_FLEX_BISON_DEPENDENCY(LEXER PARSER)
ADD_EXECUTABLE(iec_compiler.exe ${MAIN_SRC} ${ABSYNTAX_SRC} ${ABSYNTAX_UTILS_SRC} ${GENERATOR_SRC} ${PARSER_SRC} ${UTILITY_SRC} ${BISON_PARSER_OUTPUTS} ${FLEX_LEXER_OUTPUTS})
